[tool.poetry]
name = "smarthome-docs"
version = "0.1.0"
description = "Sunshine Smarthome documents"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
m2r2 = "^0.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
